--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -1492,7 +1492,7 @@ li {
         width: 193px;
 
         select {
-            background: url("{% endif %}/images/icons/Minis/Arrows.svg") no-repeat;
+            //background: url("/images/icons/Minis/Arrows.svg") no-repeat;
             background-position: 164px 6px;
             filter: brightness(0) invert(1);
             border: 0 !important;                 /*Removes border*/
