new cli page + many small fixes

--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -1,5 +1,5 @@
 {% if site.amplify.header.logo.text or site.amplify.header.logo.image or site.amplify.header.nav %}
-<div class="notification-bar row" id="notification-bar">
+<div class="notification-bar" id="notification-bar">
 	<div class="notification-content">
 		<div class="col-xs-5">
 			<img class="notification-image" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Medium/Volume.svg">
