--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -99,7 +99,7 @@
 					</div>
 				</div>
 				<div>
-					<button class="btn" id="top-section-btn">Get Started</button>
+					<a href="/media/cli_home"><button class="btn" id="top-section-btn">Get Started</button></a>
 				</div>
 				<div class="row">
 					<div class="marketing-grid">
@@ -196,7 +196,7 @@
 					Launch with our minimally-styled components and UI or whitelabel to your own specification.
 				</div>
 				<div>
-					<button class="btn" id="library-btn">View Library</button>
+					<a href="/media/tutorials"><button class="btn" id="library-btn">View Library</button></a>
 				</div>
 				<div class="row image-container">
 					<img class="library-image" id="library-auth" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Auth@1x.png">
@@ -219,26 +219,26 @@
 					<div class="install-box" id="js-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/JS-Small-White@2x.png">
 						<div class="install-text">Build with JavaScript</div>
-						<button class="install-button" id="js-btn">Get Started</button>
+						<a href="media/quick_start"><button class="install-button" id="js-btn">Get Started</button></a>
 					</div>
 					<div class="install-box" id="react-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/React-Small-White@2x.png">
 						<div class="install-text">Build with React</div>
-						<button class="install-button" id="react-btn">Get Started</button>
+						<a href="media/react_guide"><button class="install-button" id="react-btn">Get Started</button></a>
 					</div>
 					<div class="install-box" id="react-native-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/React-Small-White@2x.png">
 						<div class="install-text">Build with React Native</div>
-						<button class="install-button" id="react-native-btn">Get Started</button>
+						<a href="media/react_native_guide"><button class="install-button" id="react-native-btn">Get Started</button></a>
 					</div>
 					<div class="install-box" id="angular-box">
 						<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Angular-Med-White@1x.png">
 						<div class="install-text">Build with Angular</div>
-						<button class="install-button" id="angular-btn">Get Started</button>
+						<a href="media/angular_guide"><button class="install-button" id="angular-btn">Get Started</button></a>
 					</div>
 				</div>
 				<div>
-					<button class="btn" id="view-all-platforms-btn">View all platforms</button>
+					<a href="media/quick_start"><button class="btn" id="view-all-platforms-btn">View all platforms</button></a>
 				</div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
