--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -13,7 +13,7 @@
 				<div class="container">
 					<div class="row">
 	
-						<div class="col-md-12">
+						<div>
 							<div class="dev-guide-heading">
 								<div class="row">
 									{% for item in page.marketing_grid %}
