added linking + small fixes

--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -36,10 +36,7 @@
 							<p>Version</p>
 							<div class="version-selector">
 								<select>
-									<option value="3.3.1">3.3.1 (Stable release)</option>
-									<option value="3.2.4">3.2.4 (Stable release)</option>
-									<option value="3.0.6">3.0.6 (Stable release)</option>
-									<option value="3.4.0">3.3.2 (Beta)</option>
+									<option value="1.x.x">1.x.x (Stable release)</option>
 								</select>
 							</div>
 						</div>
