--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -238,7 +238,7 @@
 					</div>
 				</div>
 				<div>
-					<a href="media/quick_start"><button class="btn" id="view-all-platforms-btn">View all platforms</button></a>
+					<a href="media/quick_start_home"><button class="btn" id="view-all-platforms-btn">View all platforms</button></a>
 				</div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
