--- a/docs/amplify-theme/_layouts/cli_home.html
+++ b/docs/amplify-theme/_layouts/cli_home.html
@@ -13,7 +13,7 @@
 							<div class="align-inner">
                                 <h1 class="hero-subheader__title">Manage all of your services in one unified tool with Amplify Command Line Interface</h1>
 								<div id="button-logo-container">
-                                    <a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ button.url }}" class="btn btn--dark btn--rounded btn--w-icon">
+                                    <a href="/media/cli_guide" class="btn btn--dark btn--rounded btn--w-icon">
                                         {% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
                                         Install Amplify CLI
                                     </a>
