added linking + small fixes

--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -99,7 +99,7 @@
 					</div>
 				</div>
 				<div>
-					<a href="/media/cli_home"><button class="btn" id="top-section-btn">Get Started</button></a>
+					<a href="media/cli_home"><button class="btn" id="top-section-btn">Get Started</button></a>
 				</div>
 				<div class="row">
 					<div class="marketing-grid">
