--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -28,7 +28,7 @@
 									{% endfor %}
 								</div><!-- /.row -->
 								<div>
-                                    <a href="/media/cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
+                                    <a href="cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
                                     <a href="cli_home">
                                         <div id="learn-more-about-cli-box">
                                             <p id="learn-more-about-cli">Learn more about the CLI</p>
@@ -126,7 +126,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <a href="/media/cli_guide"> <button class="btn" id="install-cli-btn">Install the CLI</button> </a>
+                                    <a href="cli_guide"> <button class="btn" id="install-cli-btn">Install the CLI</button> </a>
                                     <img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Medium/CommandLine-Icon.svg" />
                                 </div>
                             </div>
