styleguide base, more linking/pictures

--- a/docs/amplify-theme/_layouts/cli_home.html
+++ b/docs/amplify-theme/_layouts/cli_home.html
@@ -46,6 +46,7 @@
                     <div class="button-container">
                         <button class="btn top-section-btn">Get Started</button>
                     </div>
+                    <img id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png">
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div><!-- /.section -->
@@ -101,6 +102,7 @@
                         <div class="button-container">
                             <button class="btn top-section-btn">CLI Reference</button>
                         </div>
+                        <img id="pages" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Pages@2x.png">
                     </div><!-- /.row -->
                 </div><!-- /.container -->
             </div><!-- /.section -->
