--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -196,7 +196,7 @@
 					Launch with our minimally-styled components and UI or whitelabel to your own specification.
 				</div>
 				<div>
-					<a href="/media/tutorials"><button class="btn" id="library-btn">View Library</button></a>
+					<a href="/media/ui_library"><button class="btn" id="library-btn">View Library</button></a>
 				</div>
 				<div class="row image-container">
 					<img class="library-image" id="library-auth" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Auth@1x.png">
