--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="row">
                     <div>
-                        <div class="section-top section-top-category section-top-quickstart">
+                        <div class="section-top section-top-category section-top-quickstart" id="bottom-section">
                             <div class="container">
                                 <div class="row">
                                     <div class="header col-sm-8">
