algolia addition to mobile search

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -319,8 +319,12 @@ a {
     }
 }
 
+.algolia-autocomplete {
+    position: static !important;
+}
+
 #search-input-xs {
-    position: absolute;
+    position: absolute !important;
     right: 10px;
     top: 10px;
     width: 40px;
